--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                     <li><a href="#carrito">Carrito</a></li>
+                     <li><a href="order.html">Pedido</a></li>
                 </ul>
             </nav>
         </div>
