--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <li><a href="#productos">Productos</a></li>
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="formulariopedido.html">Pedido</a></li>
                     <li><a href="#carrito">Carrito</a></li>
-                     <li><a href="order.html">Pedido</a></li>
                 </ul>
             </nav>
         </div>
@@ -219,6 +219,7 @@
     </script>
 </body>
 </html>
+
 
 
 
