--- a/formulariopedido.html
+++ b/formulariopedido.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedido de Tartas y Cupcakes</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="prueba/css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sailors+Condensed&family=Unica+One&display=swap" rel="stylesheet">
     <style>
         body {
@@ -133,6 +134,25 @@
         }
     </style>
 </head>
+      <!-- Header -->
+    <header>
+        <div class="container header-container">
+            <div class="logo">
+                <div class="brand-name">Maldita Dulzura</div>
+            </div>
+            <button class="mobile-menu-btn">☰</button>
+            <nav id="main-nav">
+                <ul>
+                    <li><a href="#home">Inicio</a></li>
+                    <li><a href="#productos">Productos</a></li>
+                    <li><a href="#nosotros">Nosotros</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="prueba/formulariopedido.html">Pedido</a></li>
+                    <li><a href="#carrito">Carrito</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 <body class="bg-gradient-to-br from-pink-50 to-purple-100 min-h-screen py-8">
     <div class="container mx-auto px-4 max-w-4xl">
         <div class="form-container">
