--- a/formulariopedido.html
+++ b/formulariopedido.html
@@ -143,11 +143,10 @@
             <button class="mobile-menu-btn">☰</button>
             <nav id="main-nav">
                 <ul>
-                    <li><a href="#home">Inicio</a></li>
-                    <li><a href="#productos">Productos</a></li>
-                    <li><a href="#nosotros">Nosotros</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
-                    <li><a href="prueba/formulariopedido.html">Pedido</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="tienda.html">Productos</a></li>
+                    <li><a href="Contacto.html">Contacto</a></li>
+                    <li><a href="#">Pedido</a></li>
                     <li><a href="#carrito">Carrito</a></li>
                 </ul>
             </nav>
