--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#productos">Productos</a></li>
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li><a href="#contacto">Contacto</a></li>
-                    <li><a href="prueba/formulariopedido.html">Pedido</a></li>
+                    <li><a href="formulariopedido.html">Pedido</a></li>
                     <li><a href="#carrito">Carrito</a></li>
                 </ul>
             </nav>
@@ -204,6 +204,7 @@
     </script>
 </body>
 </html>
+
 
 
 
