--- a/formulariopedido.html
+++ b/formulariopedido.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedido de Tartas y Cupcakes</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="prueba/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sailors+Condensed&family=Unica+One&display=swap" rel="stylesheet">
     <style>
         body {
