--- a/formulariopedido.html
+++ b/formulariopedido.html
@@ -8,6 +8,101 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sailors+Condensed&family=Unica+One&display=swap" rel="stylesheet">
     <style>
+        * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'SAILORS Condensed', sans-serif;
+    background-color: var(--color-light);
+    color: var(--color-black);
+    line-height: 1.6;
+}
+
+.brand-name{
+font-family: 'Berkshire Swash';
+}
+
+h1, h2, .slogan {
+    font-family: 'ANANAIAS', SANS-SERIF;
+    font-weight: 700;
+}
+
+h3, h4{
+    font-family: "ANANAIAS", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: var(--color-dark)
+  }
+
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+/* Header Styles */
+header {
+    background-color: var(--color-primary);
+    color: white;
+    padding: 15px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.brand-name {
+    font-size: 2.5rem;
+    margin-right: 15px;
+}
+
+.mobile-menu-btn {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    color: white;
+    cursor: pointer;
+}
+
+/* Navigation */
+nav ul {
+    display: flex;
+    list-style: none;
+}
+
+nav ul li {
+    margin-left: 25px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.1rem;
+    transition: color 0.3s;
+}
+
+nav ul li a:hover {
+    color: var(--color-secondary);
+}
         body {
             box-sizing: border-box;
             font-family: 'Sailors Condensed', cursive;
